--- a/style.css
+++ b/style.css
@@ -247,6 +247,10 @@ a.button_all {
     font-size: 14px;
 }
 
+.slider_container {
+    overflow: hidden;
+}
+
 .header_bottom {
     display: flex;
     align-items: center;
@@ -282,7 +286,7 @@ footer {
     margin-top: 60px;
     display: grid;
     align-items: center;
-    grid-template-columns: max-content max-content max-content max-content;
+    grid-template-columns: max-content calc(185px + 275px + 188px) max-content;
     justify-content: space-between;
 }
 
@@ -309,9 +313,11 @@ footer {
 
 .footer_links {
     display: grid;
+    grid-template-columns: 1fr 1fr;
     list-style: none;
-    padding: 0px;
-    grid-gap: 40px;
+    padding: 0;
+    grid-column-gap: 150px;
+    grid-row-gap: 40px;
 }
 
 .footer_icon {
@@ -1127,6 +1133,18 @@ a {
 
 /*Media*/
 @media screen and (max-width: 1730px) {
+    .footer_bottom {
+        grid-template-columns: max-content calc(164px + 167px + 149px) max-content;
+    }
+
+    .footer_links {
+        white-space: nowrap;
+    }
+
+    .container_subscribe {
+        grid-template-columns: 1fr auto auto;
+    }
+
     .hot_line_footer a, .language_footer a, .footer_text, .version_glasses, .header_top_left a {
         font-size: 14px;
     }
@@ -1572,6 +1590,11 @@ a {
         padding: 60px 28px 60px 28px;
     }
 
+
+    .footer_bottom > div:nth-child(2) {
+        grid-column: span 2;
+    }
+
     .footer_bottom_items.footer_bottom_l_page {
         grid-row: 1;
         grid-template-columns: max-content max-content;
@@ -1941,7 +1964,8 @@ a {
     }
 
     .footer_links {
-        grid-gap: 24px;
+        grid-column-gap: 40px;
+        grid-row-gap: 24px;
         font-size: 14px;
     }
 
@@ -4629,10 +4653,31 @@ a {
 
         grid-template-columns: 1fr;
     }
-    
 
-    .face_right_img, .face_bottom{
+    .committee_grid {
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 24px;
+    }
+
+    .committee_content {
+        padding: 20px;
+    }
+
+    .committee_content p {
+        font-size: 14px;
+        line-height: 22px;
+    }
+
+    .committee {
+        margin-top: 80px;
+    }
+
+    .face_right_img, .face_bottom {
         height: 420px;
+    }
+
+    .committee_text {
+        margin-bottom: 40px;
     }
 
     .face_right_bottom p {
@@ -4647,7 +4692,222 @@ a {
 
     .face_grid {
         max-width: 100%;
+        padding-top: 0;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .face_right_img {
+        grid-row: 2;
+    }
+
+    .face_bottom:before {
+        max-height: 100%;
+    }
+
+    .face_right_top_text_b {
+        font-size: 36px;
+        line-height: 36px;
+    }
+
+    .face_right_top_text_s {
+        margin-bottom: 8px;
+        font-size: 14px;
+        line-height: 14px;
+    }
+
+    .face_right_img, .face_bottom {
+        height: 100%;
+    }
+
+    .committee_grid {
+        grid-template-columns: 1fr;
+        grid-gap: 12px;
+    }
+
+    .committee_content {
+        padding: 16px;
+    }
+
+    .committee_text {
+        font-size: 36px;
+        line-height: 36px;
+    }
+
+    .face_bottom {
+        grid-gap: 0px;
+        grid-template-columns: 1fr;
     }
 }
 
 /*Face css end*/
+/*Representation css start*/
+.representation_map {
+    position: relative;
+}
+
+.representation_map_text:hover {
+    color: var(--cblue);
+}
+
+.representation_map_text {
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 18px;
+    cursor: pointer;
+}
+
+.representation_map_grid {
+    max-width: 1480px;
+    width: 100%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    bottom: -60px;
+    position: absolute;
+    background: #FFFFFF;
+    box-shadow: 10px 10px 48px rgba(11, 15, 48, 0.12);
+    border-radius: 16px;
+    padding: 32px;
+    justify-content: center;
+}
+
+.representation_map #map {
+    width: 100%;
+    height: 731px;
+    border-radius: 24px;
+    border: none;
+}
+
+.location_grid_item {
+    display: grid;
+    grid-template-columns: 1fr minmax(0, 322px) minmax(0, 322px);
+    grid-gap: 120px;
+}
+
+.location_m,
+.location_r {
+    display: flex;
+    flex-direction: column;
+}
+
+.representation_city_list {
+    display: grid;
+    max-width: 922px;
+    margin: 0 auto;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 20px;
+    text-align: center;
+    width: 100%;
+}
+
+.location_grid {
+    margin-top: 200px;
+    display: grid;
+    grid-gap: 40px;
+}
+
+.location_l_text {
+    font-weight: bold;
+    font-size: 56px;
+    line-height: 56px;
+    margin-bottom: 40px;
+}
+
+.location_column {
+    margin-top: auto;
+}
+
+.location_l p {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 0px;
+}
+
+.location_l .button_all {
+    margin-top: 80px;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 20px;
+    box-shadow: 4px 8px 24px rgba(1, 83, 183, 0.4);
+    border-radius: 30px;
+}
+
+.location_row {
+    display: grid;
+    grid-template-columns: max-content 120px;
+    grid-gap: 23px;
+    align-items: center;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 18px;
+    margin-bottom: 48px;
+}
+
+.location_content_s {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 16px;
+    margin-bottom: 12px;
+}
+
+.location_content_b {
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 18px;
+}
+
+.location_content {
+    margin-bottom: 68px;
+}
+
+.location_phone {
+    margin-bottom: 32px;
+}
+
+.location_phone a {
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 18px;
+}
+
+.button_location img {
+    margin-right: 12px;
+}
+
+.button_location {
+    display: flex;
+    padding: 19px 40px;
+    background: var(--cgray);
+    border-radius: 30px;
+    width: max-content;
+    align-items: center;
+}
+
+.location_grid_item {
+    background: #FFFFFF;
+    padding: 100px;
+    box-shadow: 4px 4px 24px rgba(11, 15, 48, 0.12);
+    border-radius: 24px;
+}
+
+@media screen and (max-width: 1730px) {
+    .representation_map_grid {
+        max-width: 1052px;
+    }
+
+    .representation_map_text {
+        font-size: 16px;
+        line-height: 16px;
+    }
+
+    .representation_city_list {
+        max-width: 828px;
+    }
+
+    .location_grid {
+        margin-top: 192px;
+    }
+}
+
+/*Representation css end*/
